--- a/css-folder/courses.css
+++ b/css-folder/courses.css
@@ -5,6 +5,22 @@
     box-sizing: border-box;
 
 } */
+
+/* Enquery section css */
+
+#enquery-sec{
+  width: 100%;
+  height: 7vh;
+  background-color: blueviolet;
+  color: white;
+  font-weight: 500;
+}
+
+#enquery-sec label{
+  padding-top: 10px;
+}
+
+
 .card-img-top {
   margin-top: 20px;
   margin-left: 100px;
@@ -27,6 +43,17 @@
 
 .card {
   background-color: rgb(217, 229, 251);
+  text-align: center;
+  width: 100%;
+  height: 24vh;
+}
+
+
+.it-software{
+  width: 100%;
+  background-color: rgb(0, 162, 255);
+  padding: 10px;
+  font-weight: bold;
 }
 
 .card-body {
@@ -36,12 +63,13 @@
   z-index: 999999;
 }
 
-.hide {
-  display: none;
-}
-
-.card:hover>.hide {
-  display: block;
+.demo-class h5{
+    width: 100%;
+    height: 6vh;
+    padding-top: 9px;
+    background-color: aquamarine;
+    display: flex;
+    justify-content: center;
 }
 
 /* contact page */
@@ -199,4 +227,21 @@ li a:hover {
   display: grid;
   grid-template-columns: 20px auto;
   column-gap: 12px;
+}
+
+
+/* why enroll course section */
+
+.why-enroll{
+  width: 100%;
+  height: 27vh;
+  box-shadow: 0px 0px 8px -2px;
+}
+
+.why-enroll-second{
+  text-align: center;
+  padding: 10px;
+  margin: 5px;
+  font-weight: 500;
+  font-size: 14px;
 }
