--- a/css-folder/home.css
+++ b/css-folder/home.css
@@ -15,11 +15,23 @@
 }
 
 #searchInput {
-    width: 100%;
+    width: 50vw;
     height: 40px;
     outline: none;
     border: none;
     margin-left: 10px;
+}
+
+@media screen and (max-width:955px) {
+    #searchInput{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:550px) {
+    #searchInput{
+        width: 100%;
+    }
 }
 
 #start-search {
@@ -246,8 +258,9 @@ li a:hover {
 
 .demo-class{
   width: 100%;
-  box-shadow: 0px 0px 12px -2px;
-  padding: 15px
+  box-shadow: 0px 0px 8px -2px;
+  padding: 15px;
+  text-align: center;
 }
 
 
