--- a/css-folder/courses.css
+++ b/css-folder/courses.css
@@ -17,9 +17,24 @@
 }
 
 #enquery-sec label{
-  padding-top: 10px;
+  margin-top: 13px;
 }
 
+@media screen and(max-width:900px) {
+  #enquery-sec{
+   display: block;
+   width: 100%;
+   height: 10vh;
+  }
+}
+
+@media screen and(max-width:550px) {
+  #enquery-sec{
+    display: block;
+    width: 80%;
+    height: 10vh;
+  }
+}
 
 .card-img-top {
   margin-top: 20px;
@@ -63,14 +78,7 @@
   z-index: 999999;
 }
 
-.demo-class h5{
-    width: 100%;
-    height: 6vh;
-    padding-top: 9px;
-    background-color: aquamarine;
-    display: flex;
-    justify-content: center;
-}
+
 
 /* contact page */
 #contact-form {
