--- a/css-folder/home.css
+++ b/css-folder/home.css
@@ -1,10 +1,12 @@
+
+
 #search-homepage {
     display: flex;
     flex-direction: column;
     /* margin-top: 50px; */
     box-sizing: border-box;
     width: 500px;
-    height: 110px;
+    height: 100px;
     box-shadow: 0px 0px 8px -2px;
     border-radius: 20px;
 }
@@ -30,7 +32,7 @@
 
 @media screen and (max-width:550px) {
     #searchInput{
-        width: 100%;
+        width: 95%;
     }
 }
 
@@ -94,12 +96,12 @@
 
 /* fade-up-text-css */
 
-.fade-up-text {
+/* .fade-up-text {
     opacity: 0;
     transform: translateY(30px);
-    transition: opacity 1s, transform 1s;
+    transition: opacity 2s, transform 2s;
     margin-left: 20px
-}
+} */
 
 /* .site-map{
     display: block;
@@ -261,6 +263,15 @@ li a:hover {
   box-shadow: 0px 0px 8px -2px;
   padding: 15px;
   text-align: center;
+}
+
+.demo-class h5{
+    width: 100%;
+    height: 6vh;
+    padding-top: 9px;
+    background-color: rgb(0,191,255);
+    display: flex;
+    justify-content: center;
 }
 
 
