--- a/css-folder/home.css
+++ b/css-folder/home.css
@@ -1,11 +1,21 @@
+#technohub-logo{
+   width: 150px;
+   height: 65px;
+}
 
+@media screen and (max-width:550px) {
+    #technohub-logo{
+        width: 100px;
+        height: 60px;
+     }
+}
 
 #search-homepage {
     display: flex;
     flex-direction: column;
     /* margin-top: 50px; */
     box-sizing: border-box;
-    width: 500px;
+    width: 100%;
     height: 100px;
     box-shadow: 0px 0px 8px -2px;
     border-radius: 20px;
@@ -24,11 +34,16 @@
     margin-left: 10px;
 }
 
-@media screen and (max-width:955px) {
+@media screen and (max-width:1000px) {
+    #search-homepage{
+        width: 100%;
+    }
     #searchInput{
         width: 100%;
     }
 }
+
+
 
 @media screen and (max-width:550px) {
     #searchInput{
@@ -91,6 +106,63 @@
     font-weight: 700;
 }
 
+/* learning options css */
+
+#learn-opt-heading{
+    width: 100%;
+    height: 7vh;
+    text-align: center;
+    padding: 15px;
+    color: white;
+}
+
+@media screen and (max-width:1200px) {
+    #learn-opt-heading{
+        width: 100%;
+        height: 11vh;
+        text-align: center;
+        padding: 6px;
+    }
+}
+
+@media screen and (max-width:900px) {
+    #learn-opt-heading{
+        width: 100%;
+        height: 7vh;
+        text-align: center;
+        padding: 15px;
+        color: white;
+    }
+}
+
+
+/* modal content section css */
+
+.modal-content{
+    width: 100%;
+    height: 30vh;
+}
+
+@media screen and (max-width:1200px) {
+    .modal-content{
+        width: 100%;
+        height: 37vh;
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .modal-content{
+        width: 100%;
+        height: 30vh;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .modal-content{
+        width: 100%;
+        height: 25vh;
+    }
+}
 
 
 
@@ -161,7 +233,7 @@ li a:hover {
     position: relative;
     box-shadow: 0px 0px 5px -2px;
     width: 100%;
-    height: auto;
+    height: 35vh;
 }
 
 .icon img {
@@ -171,6 +243,7 @@ li a:hover {
 
 .exp-trainer h4 {
     color: blue;
+    text-align: center;
 }
 
 .trainer{
@@ -180,7 +253,25 @@ li a:hover {
 #trainer-section{
     width: 100%;
     height: auto;
-    padding: 50px
+    padding: 10px
+}
+
+@media screen and (max-width:1100px) {
+    .exp-trainer {
+        position: relative;
+        box-shadow: 0px 0px 5px -2px;
+        width: 100%;
+        height: 42vh;
+    }
+}
+
+@media screen and (max-width:700px) {
+    .exp-trainer {
+        position: relative;
+        box-shadow: 0px 0px 5px -2px;
+        width: 100%;
+        height: 30vh;
+    }
 }
 
 
@@ -228,7 +319,7 @@ li a:hover {
 
 .prof {
     width: 100%;
-    height: auto;
+    height: 20vh;
     box-shadow: 0px 0px 8px -2px;
     transition: transform .2s;
 }
