--- a/css-folder/courses.css
+++ b/css-folder/courses.css
@@ -9,6 +9,8 @@
 /* Enquery section css */
 
 #enquery-sec{
+  display: flex;
+  justify-content: space-around;
   width: 100%;
   height: 7vh;
   background-color: blueviolet;
@@ -20,19 +22,21 @@
   margin-top: 13px;
 }
 
-@media screen and(max-width:900px) {
+@media screen and (max-width:955px) {
   #enquery-sec{
-   display: block;
    width: 100%;
    height: 10vh;
   }
 }
 
-@media screen and(max-width:550px) {
+@media screen and (max-width:550px) {
   #enquery-sec{
-    display: block;
-    width: 80%;
-    height: 10vh;
+    width: 100%;
+    height: 11vh;
+    background-color: blueviolet;
+  }
+  #enquery-sec label{
+    margin-top: 18px;
   }
 }
 
@@ -43,6 +47,7 @@
   height: 100px;
   width: 30%;
 }
+
 
 .text-container {
   background-color: rgb(10, 46, 113);
@@ -60,7 +65,30 @@
   background-color: rgb(217, 229, 251);
   text-align: center;
   width: 100%;
-  height: 24vh;
+  height: 25vh;
+}
+
+@media screen and (max-width:1100px) {
+  .card {
+    text-align: center;
+    width: 100%;
+    height: 30vh;
+  }
+}
+
+@media screen and (max-width:550px) {
+  .card {
+    text-align: center;
+    width: 100%;
+    height: 23vh;
+  }
+}
+@media screen and (max-width:800px) {
+  .card {
+    text-align: center;
+    width: 100%;
+    height: 25vh;
+  }
 }
 
 
@@ -153,6 +181,10 @@
 } */
 
 
+
+
+/* accordion section css */
+
 .accordion {
   background-color: #f0f8ff;
   color: #444;
@@ -164,11 +196,10 @@
   outline: none;
   font-size: 16px;
   transition: 0.4s;
-  font-weight: bold;
+  font-weight: 700;
   
 }
 
-/* accordion section css */
  .accordion:hover {
   background-color: #ccc; 
 }
@@ -176,7 +207,7 @@
 .accordion:after {
  content: '\002B';
  color: #777;
- font-weight: bold;
+ font-weight: 400;
  float: right;
  margin-left: 5px;
 }
@@ -194,7 +225,7 @@
    display: none;
    background-color: 	#f0ffff;
    overflow: hidden;
-   font-weight: bold;
+   font-weight: 500;
  } 
 
 
@@ -252,4 +283,18 @@ li a:hover {
   margin: 5px;
   font-weight: 500;
   font-size: 14px;
+}
+
+@media screen and (max-width:1050px){
+  .why-enroll{
+    width: 100%;
+    height: 32vh;
+  }
+}
+
+@media screen and (max-width:600px){
+  .why-enroll{
+    width: 100%;
+    height: 22vh;
+  }
 }
