--- a/css-folder/home.css
+++ b/css-folder/home.css
@@ -27,14 +27,23 @@
 }
 
 #searchInput {
-    width: 50vw;
+    width: 720px;
     height: 40px;
     outline: none;
     border: none;
-    margin-left: 10px;
+    margin-left: 2%;
 }
 
 @media screen and (max-width:1000px) {
+    #search-homepage{
+        width: 100%;
+    }
+    #searchInput{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:1500px) {
     #search-homepage{
         width: 100%;
     }
@@ -58,32 +67,15 @@
 }
 
 #search-span {
-    width: 95%;
+    width: 90%;
     /* border: 1px solid lightblue; */
     margin-top: 30px;
-    margin-left: 20px;
+    margin-left: 4.5%;
     border: 1px solid #ced4da;
     border-radius: 10px;
     align-items: center;
 }
 
-#radio-button {
-    display: inline;
-}
-
-.form-check-input {
-    margin-top: 7px;
-}
-
-
-#table-homepage {
-    width: 100%;
-    height: 600px;
-}
-
-#table-head {
-    font-size: 20px;
-}
 
 
 .icon {
@@ -161,6 +153,13 @@
     .modal-content{
         width: 100%;
         height: 25vh;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .modal-content{
+        width: 100%;
+        height: 27vh;
     }
 }
 
